<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/nameText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/nameText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/emailText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText1" />

        <TextView
            android:id="@+id/dobText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/dobText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText1" />

        <TextView
            android:id="@+id/phoneText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/phoneText1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dobText1" />

        <EditText
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nameInput1"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/nameText1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SmallSp,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/emailInput1"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/emailText1"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tvDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="16dp"
            android:autofillHints="date"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dobInput1"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/dobText1"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            tools:ignore="LabelFor,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:autofillHints="phone"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@id/tvPhone"
            android:text="@string/phoneInput1"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/phoneText1"
            app:layout_constraintTop_toBottomOf="@+id/tvDob"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="315dp"
            android:contentDescription="@string/avatarDesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>